--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 		
 		}
 		p{
-			color:  white;
+			color:   #52E750;
 		}
 		.FloatRight{
 			float:left;
 			margin-left: 10px;
 			width: 200px;
-			background-color:#441029
+			background-color: darkslategrey
 		}
 		footer{
 			clear:both;
 		}
-		main{
+		#main;{
 			margin-left: 15px;
 			padding-left: 10px
 		}
@@ -32,11 +32,16 @@
 </head>
 
 <body>
-	<div id="container" >
-	<header><h1> Welcome World</h1></header>
-	<nav class="FloatRight"><p>	This is my navigation area</p></nav>
-	<main id="main" class="FloatRight"><img src="Adventuretimefanart.jpg" style="width:450px;" height:200px; alt="Adventure Time fan art;"/></main>
-	<footer><p> copyright John Padron 2025</p></footer>
+<div id="container" >
+	<header><h1 style="text-align-last: center;font-family: serif;"> <link rel="stylesheet" href="/https://www.instagram.com/_kingremer/">King Remer's WorkShop</h1></header>
+		<hr>
+  <h3 style= "color: white; text-align-last: center;"> <b>San Antonio</b> Based Artist </h3>
+	<nav class="FloatRight"><p>	Workshop Options<br><br>- Biography<br> - Store<br> - Gallery<br> - Comission's <br> - Murals<br> - Tips and Tricks<br> - Contact</p></nav>
+	<main id="main;" ><img src="Adventuretimefanart.jpg"  style="width:525px;" height:200px; margin-left:10px; alt="Adventure Time fan art;"/></main>
+	
+	
+		
+		<footer><p> copyright John Padron 2025</p></footer>
 	
 	
 	
